--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "devDependencies": {
     "fast-glob": "^3.3.2",
     "firebase": "^10.8.0",
+    "marked": "^12.0.0",
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vite-plugin-handlebars": "^2.0.0"
+  },
+  "dependencies": {
+    "highlight.js": "^11.9.0"
   }
 }
