homepage blogs are now read from config.json files

--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     ],
     "rewrites": [{
         "source": "**",
-        "destination": "/not-found.html"
+        "destination": "/not-found/index.html"
     }]
   }
 }
