--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fast-glob": "^3.3.2",
     "firebase": "^10.8.0",
     "marked": "^12.0.0",
+    "moment": "^2.30.1",
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
